# Petal-

./: .gitignore  PROJECT_DETAILS.md  README.md  dashboard.html  petal_build.py  plan.md  pyproject.toml  requirements.txt  server.py  test_sse.py  test_uprof.py
.github/workflows/: petal-energy.yml
backend/: a.out  main.py  petal_build.py  requirements.txt  server.py  tasks.py
backend/core/: analyzer.py  policy.py  telemetry.py  transformer.py
backend/src/: target_petal.c
backend/tests/: test_cli.py  test_cli_helpers.py  test_pipeline_core.py  test_policy_telemetry.py  test_telemetry_branches.py  test_transformer_edge_cases.py
benchmarks/: energy_baseline.json
ci-results/: run1.json  run2.json
core/: telemetry.py
data/: matrix_mult.c  matrix_mult_optimized.c
data/test_workloads/: matrix_mult.c  matrix_mult_optimized.c
frontend/report/: index.html  petal_out
petal/: __init__.py  cli.py  config.py  dashboard.py  env.py  formatter.py  interactive.py  report.py  server.py
petal/cmake/: Petal.cmake
report/: index.html  www_letta_com.html
test_workloads/: matrix_mult.c  matrix_mult_optimized.c
