[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petal-compiler"
version = "0.1.0"
description = "Energy-aware compilation pipeline for C/C++ workloads"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dilraj", email = "cosdilraj07@gmail.com"},
]
dependencies = [
    "psutil>=5.9",
    "Flask>=3.0",
    "flask-cors>=4.0",
    "structlog>=24.1.0",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "PyYAML>=6.0",
    "pyRAPL>=0.2.3.1; sys_platform == 'linux'",
    "zeus-apple-silicon; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
petal = "petal.cli:main"
petal-server = "petal.server:main"

[tool.setuptools.packages.find]
include = ["petal*", "backend*"]

[tool.setuptools.package-data]
"petal.cmake" = ["*.cmake"]
